static/styles/ops_dark/opsgreen.css
/* ... */
.big_info,
.group td {
    padding-right: 0!important
}
.group td {
    position: relative
}
.torrent_table .colhead_dark td,
.torrent_table .colhead td,
.vote_matches_table .colhead td {
    padding-left: 8px;
    padding-right: 25px
}
.torrent_table .colhead_dark {
    background: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(9, 9, 9, .4)), to(hsla(0, 0%, 9%, .35)));
    background: -webkit-linear-gradient(bottom, rgba(9, 9, 9, .4), hsla(0, 0%, 9%, .35));
    background: -o-linear-gradient(bottom, rgba(9, 9, 9, .4) 0, hsla(0, 0%, 9%, .35) 100%);
    background: linear-gradient(0deg, rgba(9, 9, 9, .4) 0, hsla(0, 0%, 9%, .35));
    border-bottom: 1px solid #222;
    border-top: 1px solid #1a1a1a;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .5)
}
.torrent_table .colhead_dark td {
    padding-bottom: 8px;
    padding-top: 8px
}
.reportinfo_table blockquote {
    margin: 15px auto 10px;
    background: rgba(255, 50, 50, .03);
    border-color: rgba(150, 50, 50, .2);
    color: hsla(0, 100%, 91%, .5)
}
.colhead .sign,
.colhead_dark .sign {
    font-size: 0;
    padding: 0 10px!important;
    vertical-align: middle
}
.colhead .sign img,
.colhead_dark .sign img {
    height: 14px;
    width: 14px
}
.torrent_table .group_torrent > td > span a {
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .9)
}
.torrent_links_block a,
.torrent_table .group_torrent > td > span a,
/*DL FL RP buttons */
.torrent_table span a {
    color: #22d1a5!important;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .9)
}
.torrent_links_block a:hover,
.torrent_table .group_torrent > td > span a:hover,
/*DL FL RP color hove r */
.torrent_table span a:hover {
    color: #acd0c7!important
}
#torrents .collage_table,
#torrents .request_table,
#torrents .vote_matches_table {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    background: #1e1e1f;
    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .25);
    box-shadow: 0 0 4px rgba(0, 0, 0, .25)
}
.small {
    width: 0
}
.hide_torrents,
.show_torrents {
    cursor: pointer;
    display: block;
    font-size: 0;
    height: 27px;
    outline: 0;
    overflow: hidden;
    position: relative;
    text-indent: -9999px;
    -webkit-transition: all .3s!important;
    -o-transition: all .3s!important;
    transition: all .3s!important;
    width: 27px
}
.hide_torrents:focus,
.show_torrents:focus {
    outline: none
}
.show_torrents_link {
    display: block;
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%
}
.show_torrents_link:after,
.show_torrents_link:before {
    content: "";
    display: block;
    height: 2px;
    left: 3px;
    position: absolute;
    top: 12px;
    -webkit-transition-delay: 0, .3s, 0s;
    -o-transition-delay: 0, .3s, 0s;
    transition-delay: 0, .3s, 0s;
    -webkit-transition-duration: .15s, .3s, .3s;
    -o-transition-duration: .15s, .3s, .3s;
    transition-duration: .15s, .3s, .3s;
    width: 22px;
    background-color: #555;
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .2);
    box-shadow: 1px 1px 2px rgba(0, 0, 0, .2)
}
.show_torrents_link:hover:after,
.show_torrents_link:hover:before {
    background-color: #999
}
.show_torrents_link:before {
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    -webkit-transition-property: background-color, top, -webkit-transform;
    transition-property: background-color, top, -webkit-transform;
    -o-transition-property: background-color, top, transform;
    transition-property: background-color, top, transform;
    transition-property: background-color, top, transform, -webkit-transform
}
.show_torrents_link:after {
    -webkit-transition-property: background-color, bottom, -webkit-transform;
    transition-property: background-color, bottom, -webkit-transform;
    -o-transition-property: background-color, bottom, transform;
    transition-property: background-color, bottom, transform;
    transition-property: background-color, bottom, transform, -webkit-transform
}
.hide_torrents .show_torrents_link {
    background: transparent
}
.hide_torrents .show_torrents_link:before {
    top: 12px;
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg)
}
.hide_torrents .show_torrents_link:after {
    bottom: 0;
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg)
}
.snatched_group .show_torrents_link:after,
.snatched_group .show_torrents_link:before {
    background-color: #ac4444
}
#torrents .search_form strong {
    font-weight: 400
}
#ft_toggle {
    color: #777
}
#ft_toggle:hover {
    color: #aab
}
.filter_torrents {
    border: 0;
    margin: 0 auto 20px;
    border-bottom: 1px solid #313234
}
.filter_torrents table tr {
    background: transparent
}
.filter_torrents .submit {
    text-align: right
}
.filter_torrents input[type=search]:not(.smallest) {
    max-width: 500px!important;
    width: 100%
}
#forum .search_form td,
#torrents .search_form table:not(.cat_list) td {
    padding: 4px;
    vertical-align: middle
}
.cat_list tr td label,
.search_form #categories label {
    display: inline-block;
    text-align: center
}
span.add_bookmark,
span.remove_bookmark,
span.vote_album,
span.votespan {
    border-radius: 5px;
    color: #777!important;
    display: inline-block;
    float: right;
    font-size: .85em!important;
    line-height: normal;
    margin-right: 3px;
    padding: 4px;
    background: rgba(0, 0, 0, .15);
    border: 1px solid #1f1f1f;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .4)
}
span.add_bookmark a,
span.remove_bookmark a {
    background-position: 50%;
    background-repeat: no-repeat;
    background-size: 16px 16px;
    display: block;
    font-size: 0;
    height: 18px;
    width: 18px;
    background-image: url(../assets/icons/bookmark_unselected-dark.svg)
}
span.remove_bookmark a {
    background-image: url(../assets/icons/bookmark_selected-dark.svg)
}
/* ... */

